fix: support app_process custom terminals